fixing the scrollbar bug

--- a/src/themes/mosaic.css
+++ b/src/themes/mosaic.css
@@ -155,3 +155,10 @@ a {
 ._4_j4 time {
   color: #dcdccc !important;
 }
+
+
+
+/* fixing the scrollbar bug in some languages*/
+._kmc {
+    line-height: 1.29;
+}
